Fix alignment for login pages.

--- a/approval_polls/staticfiles/style.css
+++ b/approval_polls/staticfiles/style.css
@@ -1,95 +1,54 @@
-.btn-secondary {
-  background-color: #7ec242 !important;
-  border-color: #7ec242;
-}
 .bg-primary {
   --bs-bg-opacity: 1;
   background-color: #1d4749 !important;
 }
 
-.chart div {
-  height: 1.4em;
-}
-
-.right-buffer {
-  margin-right: 5px;
-}
-
-#textAreaCode {
-  resize: none;
-  overflow: hidden;
-  overflow-y: scroll;
-}
-
-.full-height {
-  display: inline-block;
-  width: 100%;
-}
-
-#pollQuestion {
-  display: inline-block;
-  width: 60%;
-}
-
-.full-width {
-  width: 100%;
-}
-
-.label-inline {
-  display: inline-block;
-}
-
-.text-align-center {
-  text-align: center;
-}
-
 .btn-secondary {
-  background-color: #7EC242 !important;
-  border-color: #7EC242;
+  background-color: #7ec242 !important;
+  border-color: #7ec242 !important;
 }
 
-.bg-primary {
-  --bs-bg-opacity: 1;
-  background-color: #1D4749 !important;
+.btn-primary {
+  background-color: #7ec242 !important;
+  border-color: #7ec242 !important;
 }
 
 .chart div {
   height: 1.4em;
 }
 
-.right-buffer {
-  margin-right: 5px;
-}
-
-#textAreaCode {
-  resize: none;
-  overflow: hidden;
-  overflow-y: scroll;
-}
-
-
 .full-height {
   display: inline-block;
   width: 100%;
 }
 
-#pollQuestion {
-  display: inline-block;
-  width: 60%;
-}
-
 .full-width {
-  width: 100%
-}
-
-.label-inline {
-  display: inline-block;
-}
-
-.text-align-center {
-  text-align: center;
+  width: 100%;
 }
 
 .jssocials-share-logo {
-  font-family: "Font Awesome 5 Brands" !important;
+  font-family: \"Font Awesome 5 Brands\";
+}
+
+.label-inline {
+  display: inline-block;
+}
+
+.right-buffer {
+  margin-right: 5px;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+#pollQuestion {
+  display: inline-block;
+  width: 60%;
+}
+
+#textAreaCode {
+  resize: none;
+  overflow: hidden;
+  overflow-y: scroll;
 }
